--- a/lebanese_grammar.html
+++ b/lebanese_grammar.html
@@ -72,4 +72,22 @@
 </ul>
 <div class="callout"><strong>Drop b‑</strong> after badd‑/lazem/ra7/7a/la7/la/2abl ma/ba3d ma. Imperatives use the base.</div>
 
+
+<h2 id="counting">Counting & Pluralization Rules</h2>
+<ul>
+  <li><strong>Dual (spoken):</strong> add <em>-en</em> (masc) / <em>-ten</em> (fem): <em>yawmen</em> (2 days), <em>kalben</em> (2 dogs), <em>jome3ten</em> (2 weeks), <em>d2i2ten</em> (2 minutes).</li>
+  <li><strong>3–10:</strong> number + <em>plural</em> noun: <em>tlet kleb</em> (3 dogs), <em>tlet tiyyem</em> (3 days).</li>
+  <li><strong>11–19:</strong> number + <em>singular</em>: <em>7da3shar se3a</em> (11 hours).</li>
+  <li><strong>20+:</strong> number + <em>singular</em>: <em>3eshrin se3a</em> (20 hours).</li>
+</ul>
+
+<h2 id="time-telling">Time-Telling Expressions</h2>
+<ul>
+  <li><strong>X:15</strong> = <em>X w robe3/rebe3</em> — 12:15 → <em>tna3esh w robe3</em></li>
+  <li><strong>X:30</strong> = <em>X w nos</em> — 12:30 → <em>tna3esh w nos</em></li>
+  <li><strong>X:45</strong> = <em>(X+1) ella robe3/rebe3</em> — 12:45 → <em>wehde ella robe3</em></li>
+  <li><strong>X:50</strong> = <em>(X+1) ella 3ashra</em> — 12:50 → <em>wehde ella 3ashra</em></li>
+</ul>
+
+
 </body></html>
