--- a/lebanese_numbers_time.html
+++ b/lebanese_numbers_time.html
@@ -63,6 +63,15 @@
       <td>Kanoun el tene, Shbat, Adar, Nisan, Ayyar, 7zayran, Tammouz, 2aab, Ayloul, Teshrin el awwal, Teshrin el tene, Kanoun el awwal</td></tr>
 </table>
 
+
+<table class="simple-table">
+  <tr><th>Unit</th><th>Arabic</th></tr>
+  <tr><td>Day / Days</td><td>yom / yawm • iyyem</td></tr>
+  <tr><td>Month / Months</td><td>chaher • techhor</td></tr>
+  <tr><td>Year / Years</td><td>sene • snin</td></tr>
+</table>
+
+
 <h2 id="weather">Weather & Environment</h2>
 <table class="simple-table">
   <tr><th>Arabic</th><th>English</th></tr>
