--- a/lebanese_phrases.html
+++ b/lebanese_phrases.html
@@ -65,6 +65,10 @@
   <tr><td>Kif bet2oul/bet2oule bellebnene?</td><td>How do you say (it) in Lebanese?</td></tr>
   <tr><td>Walaw • Meshé l 7al • 7amdella • Ktir • Netfe/Chwe/Nakze</td><td>You're welcome • It's fine • Thank God • A lot • A bit</td></tr>
   <tr><td>3anjad? • 3anjad 3am be7ke • Fhemet 3layk • 3refet/3refte kif?</td><td>Seriously? • I'm serious • I understood you • Did you understand?</td></tr>
+
+  <tr><td>Shou lon l sama?</td><td>What color is the sky?</td></tr>
+  <tr><td>Kif l ta2es?</td><td>How's the weather?</td></tr>
+  <tr><td>2adde l 7arara?</td><td>What's the temperature?</td></tr>
 </table>
 
 <h2 id="politeness">Politeness & Replies</h2>
