--- a/lebanese_verbs.html
+++ b/lebanese_verbs.html
@@ -35,6 +35,7 @@
   <a href="#yeshrab">To drink — yeshrab</a>
   <a href="#ya3mel">To do/make — ya3mel</a>
   <a href="#ye2ol">To say — ye2ol</a>
+  <a href="#have">To have — ykoun 3endo</a>
   <a href="#patterns">Conjugation Patterns & Notes</a>
 </div>
 
@@ -82,6 +83,23 @@
   <tr><td>Past</td><td>ana <strong>2elet</strong>; enta <strong>2elet</strong>; ente <strong>2elti</strong>; ento <strong>2elto</strong>; houwwe <strong>2al</strong>; hiyye <strong>2alet</strong>; ne7na <strong>2elna</strong>; henne <strong>2alo</strong></td></tr>
   <tr><td>Imperative</td><td><strong>2oul</strong> (m), <strong>2oule</strong> (f), <strong>2oulo</strong> (pl)</td></tr>
 </table>
+
+
+<h2 id="have">To have — ykoun 3endo</h2>
+<table class="simple-table">
+  <tr><th>Tense</th><th>Forms</th></tr>
+  <tr><td>Present</td>
+      <td>ana <strong>3ande</strong>; enta <strong>3andak</strong>; ente <strong>3andik</strong>; ento <strong>3andkon</strong>;
+          houwwe <strong>3ando</strong>; hiyye <strong>3anda</strong>; ne7na <strong>3andna</strong>; henne <strong>3andon</strong></td></tr>
+  <tr><td>Past</td>
+      <td>ana <strong>ken 3ande</strong>; enta <strong>ken 3andak</strong>; ente <strong>ken 3andik</strong>; ento <strong>kento 3andkon</strong>;
+          houwwe <strong>kan 3ando</strong>; hiyye <strong>kanet 3anda</strong>; ne7na <strong>kenna 3andna</strong>; henne <strong>kano 3andon</strong></td></tr>
+  <tr><td>Future</td>
+      <td>ana <strong>ra7 ykoun 3ande</strong>; enta <strong>ra7 ykoun 3andak</strong>; ente <strong>ra7 ykoun 3andik</strong>; ento <strong>ra7 ykoun 3andkon</strong>;
+          houwwe <strong>ra7 ykoun 3ando</strong>; hiyye <strong>ra7 tkoun 3anda</strong>; ne7na <strong>ra7 nkoun 3andna</strong>; henne <strong>ra7 ykoun 3andon</strong></td></tr>
+</table>
+<div class="small">Notes: In everyday speech many speakers say <em>kan/ken</em>; both are understood. For existence use <strong>fi / ma fi</strong> (there is/there isn’t).</div>
+
 
 <h2 id="patterns">Patterns & Notes</h2>
 <ul>
