--- a/lebanese_vocab.html
+++ b/lebanese_vocab.html
@@ -32,12 +32,42 @@
   <h1>Core Vocabulary — Family, Colors, Body, Directions, House</h1>
   
 <div class="toc">
+  <a href="#pronouns">Pronouns &amp; Possessives</a>
   <a href="#family">Family</a>
   <a href="#colors">Colors</a>
   <a href="#body">Body Parts</a>
   <a href="#directions">Directions & Places</a>
   <a href="#house">House & Spaces</a>
+  <a href="#clothes">Clothes</a>
+  <a href="#adjectives">Adjectives</a>
 </div>
+
+
+<h2 id="pronouns">Pronouns & Possessives</h2>
+<table class="simple-table">
+  <tr><th>Pronouns</th><th>English</th></tr>
+  <tr><td>ana</td><td>I</td></tr>
+  <tr><td>enta</td><td>you (male)</td></tr>
+  <tr><td>ente</td><td>you (female)</td></tr>
+  <tr><td>ento</td><td>you (plural)</td></tr>
+  <tr><td>houwwe</td><td>he</td></tr>
+  <tr><td>hiyye</td><td>she</td></tr>
+  <tr><td>ne7na</td><td>we</td></tr>
+  <tr><td>henne</td><td>they</td></tr>
+</table>
+<h3>Possessives (taba3-)</h3>
+<table class="simple-table">
+  <tr><th>Form</th><th>Meaning</th></tr>
+  <tr><td>taba3e</td><td>mine</td></tr>
+  <tr><td>taba3ak</td><td>yours (male)</td></tr>
+  <tr><td>taba3ik</td><td>yours (female)</td></tr>
+  <tr><td>taba3kon</td><td>yours (plural)</td></tr>
+  <tr><td>taba3o</td><td>his</td></tr>
+  <tr><td>taba3a</td><td>hers</td></tr>
+  <tr><td>taba3na</td><td>ours</td></tr>
+  <tr><td>taba3on</td><td>theirs</td></tr>
+</table>
+
 
 <h2 id="family">Family</h2>
 <table class="simple-table">
@@ -65,6 +95,7 @@
   <tr><td>banafsaje</td><td>banafsajiyye</td><td>Purple</td></tr>
   <tr><td>dahabe</td><td>—</td><td>Gold</td></tr>
   <tr><td>fodde</td><td>—</td><td>Silver</td></tr>
+  <tr><td colspan="2"><strong>lon</strong> — color; <strong>alwen</strong> — colors</td><td></td></tr>
 </table>
 
 <h2 id="body">Body Parts</h2>
@@ -105,6 +136,7 @@
   <tr><td>Ba7er • Mou7iit • Saa7il • Sahel</td><td>Sea/Beach • Ocean • Coast • Plain/Valley</td></tr>
   <tr><td>Bineeye/Bineyeet • She22a</td><td>Building(s) • Apartment</td></tr>
   <tr><td>Mat3am/Mat3aam • Tarii2/Tor2aat</td><td>Restaurant • Road(s)</td></tr>
+  <tr><td>Medina • Da3ya</td><td>City • Village (variant)</td></tr>
 </table>
 
 <h2 id="house">House & Spaces</h2>
@@ -115,6 +147,55 @@
   <tr><td>Kerse/Karase • Taawle • Ta5et • 5zeene • Mreeye</td><td>Chair(s) • Table • Bed • Closet • Mirror</td></tr>
   <tr><td>Sejjede • Berdeeye • Daww/Lamba</td><td>Carpet • Curtain • Light/Lamp</td></tr>
   <tr><td>Berrad • Telleje • Talej • Foren • 8asseele • Kanabeye/Sofa • Sobbat</td><td>Fridge • Refrigerator • Ice • Oven • Washing machine • Sofa • Shoes</td></tr>
+  <tr><td>Bouwwebe</td><td>Gate</td></tr>
+  <tr><td>3amoud</td><td>Tower/Pillar</td></tr>
+  <tr><td>Satel</td><td>Bucket</td></tr>
+  <tr><td>Corridor</td><td>Hallway (variant)</td></tr>
 </table>
+
+
+<h2 id="clothes">Clothes</h2>
+<table class="simple-table">
+  <tr><th>Arabic</th><th>English</th></tr>
+  <tr><td>Tyeb</td><td>Clothes</td></tr>
+  <tr><td>Ta2em</td><td>Outfit</td></tr>
+  <tr><td>Jackeet</td><td>Jacket</td></tr>
+  <tr><td>2amis • 2omsaan</td><td>Shirt • Shirts</td></tr>
+  <tr><td>Bluse • Blouwaz</td><td>Blouse • Blouses</td></tr>
+  <tr><td>Bantalon</td><td>Pants</td></tr>
+  <tr><td>Tannoura • Tneniir</td><td>Skirt • Skirts</td></tr>
+  <tr><td>Festaan</td><td>Dress</td></tr>
+  <tr><td>Kanze</td><td>Sweater/Jumper</td></tr>
+  <tr><td>Sheel</td><td>Scarf</td></tr>
+  <tr><td>Sobbat</td><td>Shoes</td></tr>
+  <tr><td>Short</td><td>Shorts</td></tr>
+  <tr><td>Kalset</td><td>Socks</td></tr>
+  <tr><td>Ka3eb 3aale • Ka3eb waate</td><td>High heels • Low heels</td></tr>
+  <tr><td>2meesh</td><td>Fabric</td></tr>
+  <tr><td>2oten</td><td>Cotton</td></tr>
+  <tr><td>Souuf</td><td>Wool</td></tr>
+  <tr><td>Jeled</td><td>Leather</td></tr>
+  <tr><td>Plastic</td><td>Plastic</td></tr>
+  <tr><td>Mouuda</td><td>Fashion</td></tr>
+  <tr><td>Badle</td><td>Suit</td></tr>
+  <tr><td>3wayneet</td><td>Glasses</td></tr>
+</table>
+
+<h2 id="adjectives">Adjectives</h2>
+<table class="simple-table">
+  <tr><th>Arabic</th><th>English</th></tr>
+  <tr><td>7elo (m) • 7elwe (f)</td><td>Pretty</td></tr>
+  <tr><td>Kbiir (m) • Kbiire (f)</td><td>Big</td></tr>
+  <tr><td>Z8iir (m) • Z8iiire (f)</td><td>Small</td></tr>
+  <tr><td>Tawil (m) • Tawiile (f)</td><td>Tall/Long</td></tr>
+  <tr><td>2asir (m) • 2asiire (f)</td><td>Short</td></tr>
+  <tr><td>Ktiir</td><td>Very / much / a lot</td></tr>
+  <tr><td>Chwe / Netfe</td><td>A little</td></tr>
+  <tr><td>Nakze</td><td>Little (opposite of ktiir)</td></tr>
+  <tr><td>Mniah</td><td>Good, well</td></tr>
+  <tr><td>3al mouda</td><td>Fashionable</td></tr>
+  <tr><td>Stylak 7elo (m) • Stylik 7elo (f)</td><td>You're stylish (m/f)</td></tr>
+</table>
+
 
 </body></html>
